--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
       - kakao
       - sms
       - s3
+  servlet:
+    multipart:
+      maxFileSize: 10MB
+      maxRequestSize : 10MB
 
 logging:
   level:
@@ -25,4 +29,3 @@ logging:
       amazonaws:
         util:
           EC2MetadataUtils: error
-
